--- a/apps/atoms/package.json
+++ b/apps/atoms/package.json
@@ -1,39 +1,43 @@
 {
   "name": "@surikmr1/atoms",
-  "version": "3.0.0",
-  "main": "dist/bundle.js",
+  "version": "6.3.1",
+  "main": "lib/common.js",
   "module": "src/index.ts",
-  "types": "dist/typings/index.d.ts",
-  "typings": "dist/definations/index.d.ts",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
+  "directories": {
+    "lib": "lib"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "react": "^18.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "typescript": "^4.8.4"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "prebuild": "rimraf build && rimraf dist-esm",
+    "prebuild": "rimraf dist && rimraf dist-esm && rimraf lib",
     "build": "tsc && webpack --mode production",
     "build:e": "tsc && tsc -m es6 --outDir dist-esm && webpack --mode production"
   }
