--- a/apps/atoms/tsconfig.json
+++ b/apps/atoms/tsconfig.json
@@ -4,7 +4,7 @@
     "compilerOptions": {
         "outDir": "dist",
         "target": "ES5",
-        // "baseUrl": "src",
+        "baseUrl": "src",
         // "rootDir": "./",
         "module": "CommonJS",
         "lib": ["ES5","DOM"],
@@ -12,13 +12,9 @@
         "sourceMap": true,
         "noEmit": false,
         "esModuleInterop": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "declaration": true,
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx",
-        "src/**/*.js",
-        "src/**/*.jsx",
-    ],
+    "include": ["src/**/*"],
     "exclude": ["node_modules"]
   }
