--- a/apps/atoms/package.json
+++ b/apps/atoms/package.json
@@ -23,12 +23,14 @@
     "@types/react": "^18.0.21",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "eslint": "^8.24.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react": "^18.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "@surikmr1/config": "*"
   },
   "dependencies": {
     "typescript": "^4.8.4"
@@ -39,6 +41,7 @@
   "scripts": {
     "prebuild": "rimraf dist && rimraf dist-esm && rimraf lib",
     "build": "tsc && webpack --mode production",
+    "lint": "eslint --fix \"./src/**/*.{ts,tsx,jsx,json}\"",
     "build:e": "tsc && tsc -m es6 --outDir dist-esm && webpack --mode production"
   }
 }
