--- a/apps/atoms/package.json
+++ b/apps/atoms/package.json
@@ -20,17 +20,20 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@surikmr1/config": "*",
+    "@types/babel__generator": "^7.6.4",
     "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@surikmr1/config": "*"
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "typescript": "^4.8.4"
@@ -42,6 +45,7 @@
     "prebuild": "rimraf dist && rimraf dist-esm && rimraf lib",
     "build": "tsc && webpack --mode production",
     "lint": "eslint --fix \"./src/**/*.{ts,tsx,jsx,json}\"",
+    "test": "jest --coverage",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "build:e": "tsc && tsc -m es6 --outDir dist-esm && webpack --mode production"
   }
